<resources>
    <string name="app_name">MyUtils</string>

    <!-- NetUtil -->
    <string name="NetUtils">网络实时监测</string>
    <string name="NetUtils_offline">断网了</string>
    <string name="NetUtils_button1">检测是否有网</string>
    <string name="NetUtils_button2">检测是否有wifi</string>

    <!--序列号及uuid-->
    <string name="xuLieHao">uuid和序列号</string>

    <!--上下拉刷新-->
    <string name="swipeRefresh">上下拉刷新</string>

    <!-- recyclerView -->
    <string name="recyclerView">RecyclerView</string>

    <!-- RxJava -->
    <string name="rxJava">RxJava</string>

    <!-- okHttp -->
    <string name="okHttp">okHttp</string>

    <!-- DataBinding -->
    <string name="dataBinding">DataBinding</string>

    <!-- 百度语音合成 -->
    <string name="yuyin">百度语音合成</string>.

    <!-- svg -->
    <string name="svg">svg</string>

    <!-- share -->
    <string name="share">分享</string>
    <string name="login">QQ登陆</string>
    <string name="icon_url">头像</string>
    <string name="user_id">用户id：</string>
    <string name="accesstoken">accesstoken：</string>
    <string name="expiration">过期时间：</string>
    <string name="gender">性别：</string>
    <string name="is_yellow_year_vip">是否黄钻：</string>
    <string name="yellow_vip_level">黄钻等级：</string>
    <string name="city">城市：</string>
    <string name="province">省份：</string>

    <!-- kotlin -->
    <string name="kotlin">kotlin</string>

    <!-- zxing -->
    <string name="zxing">zxing</string>
    <string name="zxing_content">点击</string>

    <!-- retrofit -->
    <string name="retrofit">Retrofit</string>
    <string name="retrofit_content">输入手机号</string>
    <string name="JI_SU_SHU_JU_APPKEY">9818d517274525b0</string>

    <!-- 高德 -->
    <string name="gaoDe">高德</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <!-- 自定义view -->
    <string name="myView">view</string>

    <!-- 增加人员 -->
    <string name="addPeople">增加人员</string>

    <!-- 增加人员 -->
    <string name="update">文件同步</string>

    <!-- 蓝牙 -->
    <string name="bluetooth">蓝牙学习</string>

    <!-- poi -->
    <string name="poi">poi</string>

    <!--阿里热修复-->
    <string name="RSASECRET">MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCi/BU+sPxHv/NGvvKhii+M45XDjYuRNgst5pSqkTDYiwG7LO+7WyHcdDL0Q0md4ngGxOgHsAsKfX53JhyxsVFZje/bXanC5g/uF86mibL85LPgSGQOS0dPM68PIqLbyc2fRTxfN3F76deqxjaew4x2/ZrImJpr3vCeL2dkyGM4A/3ZzYb+HzpgcMMO+UUbw8PyDfVkNNg3MJqYGy42pMSCsOIJFLC/4qWR/ZOzZTIFGlM+nRpxw27WAkrvaz3GFvv6/6z9mJi6+xp5X8TgC8j61q1fkcivNz9wqBwcnZN08RVWkKyJn+VEqnPeaWiJAeWuqbOayxwmeUOdeAnxWTYTAgMBAAECggEAAVP4gFhE1fjUbKElrPdJR+aa08sVdgtwr+EPGQyxzzHiw7msAmTNs9QmjiL2OJkdzUBRe66NiHpZS3M+DJybQxWK/MiYl4P0YUZEYssAcFsUtCEi35Lxc83CAWeQ2CWezUttIIF9JTtUjIms7EI/pMCQQE4uA+7/Gurb9tBDLrOmRfyiIm7ciPaCk/hgOsnP0M0LWzfO47dsk2LQ+Tmqg/sYC5kQI/928LlZcfr3IcL9ZWs9BF93L7YT+SwxdMWBd6QQUGAfesP5Iu937NwC5qXF2HLMgMCeZEqNVyd/6KYl6+jDc/eE9nyf9eTjOm11WbK6cKqzy0uKwLyjOBt5gQKBgQDlU+HA/B6kDj5mD4RGIHa8Qc+pM/HloXtL4fjNS//km8wjRi+aE1LxpoKInbc8Pfsk5iStxLbIxBggmbDwV9Ge/6PetMjgvsfJdbKnBWu0NNyCZJ9FUdIRNZXJ4pk6rFuMys87tSHVPYAWm5V1r04c7kZWofer0CMGw6tF7DW8IQKBgQC18N9AOSKj1Be8pdTHxZaRdk2QIz0kq5w9EI2XjF/3FRps7nfpGg3Ql+0PPcCaV9estiD27gQ7FC9ZrOYbHE/LpzV5swdmD6OLEM84ixNAj/YYqC52KB+ZLieXZq2Lh1u7Vbv+Ye3L8zpzEJBLY3DGR4qblYWOD7QtYFME3IlLswKBgGksFxTSi5rhjWxxIVCoAsxDwmDvGbkeXdVnRRuiBzFo4i4rOhmHUzrQCn1tF2PhaRR7F8c5uDpK9GW/Fo6jN9ebliPE9XtdA3M5Lz26FrMGqzqBuymnZJfP42o7KdrmwPXI7VGMuH97PQshP2JBi6lo/YktrtB1HBs2EY53zg0BAoGBALFHnSFFCt27Yc2tgCGQA+CE95rE22UJ2lkd8fmDDFcDNxaBXlHB00g3YQQC1dMOWNavOHui/HhceK7Wa/hqo836hX6p1UG7Z02v+VpNGVtFazQnW+5BtlhZwrYhlGRqZhWpul5qKX0a6Q8JSrBKmq55MzPag6Ii5xt3yizoftdFAoGAENIK0TlR6cq51PTNmPo1Smad4B4ofRRNSMpZkhv+4IvZoc20ygwxuMUqJz9xBHc/zmFeS6XZ4NJFW1ynRZdQum51YfVjxOGNXYB9EJ6xajiDB10yL15Q3iJdqN+QsXTKRPEeEOyg/u5zuxyTnMjBJfu6fy+cbW8KkltVfJ+DfGc=</string>

</resources>
