<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.huchenzhang.myutils.MainActivity">

    <GridLayout
        android:id="@+id/lay_MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3">

        <Button
            android:id="@+id/bt_NetUtils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/NetUtils"/>

        <Button
            android:id="@+id/bt_XuLieHao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuLieHao"/>

        <Button
            android:id="@+id/bt_SwipeRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipeRefresh"/>

        <Button
            android:id="@+id/bt_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recyclerView"/>

        <Button
            android:id="@+id/bt_rx_java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rxJava"/>

        <Button
            android:id="@+id/bt_data_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataBinding"/>

        <Button
            android:id="@+id/bt_yuyin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuyin"/>

        <Button
            android:id="@+id/bt_svg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/svg"/>

        <Button
            android:id="@+id/bt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"/>

        <Button
            android:id="@+id/bt_kotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kotlin"/>

        <Button
            android:id="@+id/bt_zxing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zxing"/>

        <Button
            android:id="@+id/bt_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit"/>

    </GridLayout>
</layout>