<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_share"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintStart_toEndOf="@+id/bt_share"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_1"
            android:text="@string/icon_url"
            app:layout_constraintTop_toBottomOf="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_icon_url"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon_url" />

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon_url"
            app:layout_constraintStart_toEndOf="@+id/tv_2"
            />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accesstoken"
            app:layout_constraintTop_toBottomOf="@+id/tv_2" />

        <TextView
            android:id="@+id/tv_accesstoken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_2"
            app:layout_constraintStart_toEndOf="@+id/tv_3"
            />

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration"
            app:layout_constraintTop_toBottomOf="@+id/tv_3" />

        <TextView
            android:id="@+id/tv_expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_3"
            app:layout_constraintStart_toEndOf="@+id/tv_4"
            />

        <TextView
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@+id/tv_4" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_4"
            app:layout_constraintStart_toEndOf="@+id/tv_5"
            />

        <TextView
            android:id="@+id/tv_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_yellow_year_vip"
            app:layout_constraintTop_toBottomOf="@+id/tv_5" />

        <TextView
            android:id="@+id/tv_is_yellow_year_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_5"
            app:layout_constraintStart_toEndOf="@+id/tv_6"
            />

        <TextView
            android:id="@+id/tv_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow_vip_level"
            app:layout_constraintTop_toBottomOf="@+id/tv_6" />

        <TextView
            android:id="@+id/tv_yellow_vip_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_6"
            app:layout_constraintStart_toEndOf="@+id/tv_7"
            />

        <TextView
            android:id="@+id/tv_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            app:layout_constraintTop_toBottomOf="@+id/tv_7" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_7"
            app:layout_constraintStart_toEndOf="@+id/tv_8"
            />

        <TextView
            android:id="@+id/tv_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/province"
            app:layout_constraintTop_toBottomOf="@+id/tv_8" />

        <TextView
            android:id="@+id/tv_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_8"
            app:layout_constraintStart_toEndOf="@+id/tv_9"
            />




    </android.support.constraint.ConstraintLayout>
</layout>